# rdf_benchmark

./: .gitignore  Makefile  README.md  benchmark_results.ipynb  hdt_rs_current_vs_previous_versions.ipynb  plot_utils.py  query_all  requirements.txt  run_benchmark
b_elixir/: .gitignore  mix.exs
b_elixir/lib/: belix.exs
b_hdt_cpp/: Makefile  compile  old.cpp  run.cpp  run.sh
b_hdt_java/: .gitignore  HdtJavaBenchmark.java  Makefile  cp.sh  run
b_hdt_java/src/: HdtJavaBenchmark.java
b_jena/: .gitignore  JenaBenchmark.java  Makefile  cp.sh
b_nodejs/: package.json
b_python/: run.py
b_rdf4cpp/: .gitignore  CMakeLists.txt  Makefile  conan.sh  conanfile.txt  measures.h  run.cpp  run.sh
b_rdf4cpp/cmake/: conan_cmake.cmake
b_sophia/: Cargo.toml  Makefile  perf.data  rustfmt.toml
b_sophia/src/: main.rs
csv/: parse-hdt_rs-v0.1.8.csv  parse-hdt_rs-v0.2.0.csv  parse-sophia.csv  query-hdt_cpp.csv  query-hdt_java.csv  query-hdt_rs-v0.1.8.csv  query-hdt_rs-v0.2.0.csv  query-hdt_rs.csv  query-jena.csv  query-librdf.csv  query-n3js.csv  query-python.csv  query-sophia.csv  query-sophia_hdt.csv  query-sophia_lg.csv  query2-hdt_java.csv  query2-jena.csv  query2-librdf.csv  query2-n3js.csv  query2-python.csv  query2-sophia.csv  query2-sophia_lg.csv
data/: .gitignore  Makefile  convert
