[package]
name = "sophia_benchmark"
version = "0.3.3"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>", "Konrad Höffner"]
edition = "2021"

[workspace]
members = [".", ]

[dependencies]
sophia = "=0.8.0"
time = "*"
regex = "1.7.0"
hdt = "=0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1
